--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@
   position: absolute;
   width: 100px;
   height: 20px;
-  // background-color: rgb(72, 49, 131);
+  background-color: rgb(72, 49, 131);
   background-image: linear-gradient(to left, rgb(72, 49, 131), rgb(75, 75, 253), rgb(72, 49, 131));
   border: solid black 1px;
   border-radius: 10px;
