--- a/style.scss
+++ b/style.scss
@@ -18,28 +18,51 @@
   width: 560px;
   height: 600px;
   border: solid black 1px;
-  background-image: linear-gradient(-45deg,rgba(0, 132, 255, 0.27) 10%, rgba(0, 0, 0, 0.74));
+  background-image: linear-gradient(
+    -45deg,
+    rgba(0, 132, 255, 0.27) 10%,
+    rgba(0, 0, 0, 0.74)
+  );
   // background: rgb(57, 107, 177);
 }
 
 .block {
   position: absolute;
-  border: black .1px solid;
-  background-image: linear-gradient(12deg,rgb(106, 50, 50) 10%, rgba(3, 170, 148, 0.565));
+  border: black 0.1px solid;
+  background-image: linear-gradient(
+    12deg,
+    rgb(106, 50, 50) 10%,
+    rgba(3, 170, 148, 0.565)
+  );
   width: 100px;
   height: 20px;
   // background-color: rgb(106, 50, 50);
   border-radius: 3px;
 }
 
-.user {
+// .user {
+//   position: absolute;
+//   width: 100px;
+//   height: 20px;
+//   // background-image: url('/USER.png');
+//   // background-color: rgb(72, 49, 131);
+//   // background-image: linear-gradient(
+//   //   to left,
+//   //   rgb(72, 49, 131),
+//   //   rgb(75, 75, 253),
+//   //   rgb(72, 49, 131)
+//   // );
+//   border: solid black 1px;
+//   border-radius: 10px;
+// }
+
+.userTwo {
   position: absolute;
+  // left: 230px;
+  // bottom: 10px;
   width: 100px;
   height: 20px;
-  background-color: rgb(72, 49, 131);
-  background-image: linear-gradient(to left, rgb(72, 49, 131), rgb(75, 75, 253), rgb(72, 49, 131));
-  border: solid black 1px;
-  border-radius: 10px;
+  // z-index: 999
 }
 
 .ball {
